@@ -31,7 +31,7 @@ being "practically equivalent to zero".}
 For \code{hdi()}, if \code{x} is a vector, returns a vector of length two
         with the lower and upper limit of the HDI; if \code{x} is a
         \code{stanreg}-object, returns a tibble with lower and upper HDI-limits
-        for each predictor. For \code{rope()}, returns the percentage of values
+        for each predictor. For \code{rope()}, returns the proportion of values
         from \code{x} that are within the boundaries of \code{rope}.
 }
 \description{
