@@ -3,6 +3,7 @@ Version 0.11.1
 Changes to functions:
 * `typical_value()` gets a "zero"-option for the `fun`-argument.
 * Changes to `icc()`, which used `stats::sigma()` and thus required R-version 3.3 or higher. Now should depend on R 3.2 again.
+* `se()` now also supports `stanreg` and `stanfit` objects.
 
 New functions:
 * `rope()` to calculate the region of practical equivalence for MCMC samples.
